Fixed z-index issue in hero component

--- a/src/scss/components/_hero.scss
+++ b/src/scss/components/_hero.scss
@@ -3,12 +3,17 @@
   flex-direction: column;
   height: 100vh;
   justify-content: center;
+
+  & .useful-links {
+    z-index: 10;
+  }
   
   &__bg-animation {
     height: 100vh;
     overflow-x: hidden;
     position: absolute;
     width: 97%;
+    z-index: 1;
     
     & > svg {
       position: absolute;
